Creada clase Usuario, modificado metodo comprar y modificado ControladorLogin